[gd_scene load_steps=5 format=2]

[ext_resource path="res://Bird.gd" type="Script" id=1]
[ext_resource path="res://bird_18sheet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 6 )

[sub_resource type="Animation" id=2]
resource_name = "fly"
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[node name="Bird" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )
hframes = 18
frame = 11

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -0.266792 )
scale = Vector2( 1, 0.988884 )
rect = Rect2( -24, -24, 48, 48 )

[node name="TimeToTurn" type="Timer" parent="."]
one_shot = true

[node name="ShapeToKill" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fly"
anims/fly = SubResource( 2 )
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_screen_exited"]
[connection signal="timeout" from="TimeToTurn" to="." method="_on_time_to_turn"]
